[project]
name = "cookit"
dynamic = ["version"]
description = "A toolkit for self use."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = ["typing-extensions>=4.12.2", "fleep>=1.0.1", "anyio>=4.4.0"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc2333/cookit"


[project.optional-dependencies]
jinja = ["jinja2>=3.1.4"]

loguru = ["loguru>=0.7.2"]

nonebot-base = ["nonebot2>=2.3.1"]
nonebot-alconna = ["cookit[nonebot-base]", "nonebot-plugin-alconna>=0.50.2"]
nonebot = ["cookit[nonebot-alconna]"]

playwright = ["playwright>=1.45.1"]
pw = ["cookit[playwright]"]

pydantic = ["pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"]
pyd = ["cookit[pydantic]"]

all = ["cookit[jinja,loguru,nonebot,playwright,pydantic]"]
yarl = ["playwright>=1.45.1"]


[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-playwright-async>=0.17.0",
    "nonebot2[all]>=2.3.1",
    "nonebug>=0.3.7",
    "nonebot-adapter-satori>=0.12.3",  # for alconna recall test
]

[tool.pytest.ini_options]
addopts = "--ignore=tests_standalone"
asyncio_mode = "auto"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "cookit/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
