[project]
name = "cookit"
dynamic = ["version"]
description = "A toolkit for self use."
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = ["typing-extensions>=4.12.2"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc2333/cookit"

[project.optional-dependencies]
common = ["fleep>=1.0.1"]

jinja = ["jinja2>=3.1.4"]

loguru = ["loguru>=0.7.2"]

nonebot-base = ["nonebot2>=2.4.0"]
nonebot-alconna = ["cookit[nonebot-base]", "nonebot-plugin-alconna>=0.54.0"]
nonebot = ["cookit[nonebot-alconna]"]

playwright = ["playwright>=1.49.0", "anyio>=4.6.2.post1", "yarl>=1.18.3"]
pw = ["cookit[playwright]"]

pydantic = ["pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"]
pyd = ["cookit[pydantic]"]

all = ["cookit[common,jinja,loguru,nonebot,playwright,pydantic]"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "nonebot2[all]>=2.4.0",
    "nonebug>=0.4.2",
    "nonebot-adapter-satori>=0.12.6", # for alconna recall test
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "cookit/__init__.py"

[tool.pytest.ini_options]
addopts = "--ignore=tests_standalone"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
