[project]
name = "cookit"
dynamic = ["version"]
description = "A toolkit for self use."
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = ["typing-extensions>=4.14.1"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc2333/cookit"

[project.optional-dependencies]
common = ["fleep>=1.0.1"]

jinja = ["jinja2>=3.1.5"]

loguru = ["loguru>=0.7.3"]

nonebot-base = ["nonebot2>=2.4.1"]
nonebot-alconna = ["cookit[nonebot-base]", "nonebot-plugin-alconna>=0.54.2"]
nonebot-localstore = [
    "cookit[nonebot-base]",
    "nonebot-plugin-localstore>=0.7.4",
]
nonebot = ["cookit[nonebot-alconna,nonebot-localstore]"]

playwright = ["playwright>=1.50.0", "anyio>=4.8.0", "yarl>=1.18.3"]
pw = ["cookit[playwright]"]

pydantic = ["pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"]
pyd = ["cookit[pydantic]"]

all = ["cookit[common,jinja,loguru,nonebot,playwright,pydantic]"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "nonebot2[all]>=2.4.3",
    "nonebug>=0.4.3",
    "nonebot-adapter-satori>=0.13.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cookit/__init__.py"

[tool.pytest.ini_options]
addopts = "--ignore=tests_standalone"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
